# GDID-Extractor

./: LICENSE  readme.md
bof/: Makefile  README.md  beacon.h  get_gdid.c  get_gdid.cna
bof/COFFLoader/: COFFLoader.c  COFFLoader.h  LICENSE.txt  Makefile  README.md  beacon_compatibility.c  beacon_compatibility.h  beacon_generate.py  test.c
c/: Makefile  get_gdid.c
patch-poc/: Cargo.toml
patch-poc/src/: main.rs
rust/: Cargo.toml
rust/src/: main.rs
