[package]
name    = "gdid-patch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gdid-patch"
path = "src/main.rs"

[dependencies.windows-sys]
version  = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
]

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
