[package]
name    = "gdid"
version = "0.1.0"
edition = "2021"

[dependencies.windows-sys]
version  = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security_Cryptography",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
]

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
